--- a/angular-src/src/app/components/dashboard/posts/posts.component.scss
+++ b/angular-src/src/app/components/dashboard/posts/posts.component.scss
@@ -1,5 +1,9 @@
 .dashboard-posts-component-wrapper {
     .tab-selection-menu {
         margin-bottom: 2em;
+
+        .view-posts-nav-btn {
+            height: 3em;
+        }
     }
 }
