--- a/angular-src/src/app/components/views/navbar/navbar.component.scss
+++ b/angular-src/src/app/components/views/navbar/navbar.component.scss
@@ -3,7 +3,8 @@
     font-weight: 700;
     font-family: 'News Cycle';
     border-bottom: 1px solid #eeeeee;
-    padding: 0;
+    padding-top: 0;
+    padding-bottom: 0;
     margin-bottom: 20px;
 
     .nav-link {
