add google maps integration

--- a/angular-src/src/app/components/views/navbar/navbar.component.html
+++ b/angular-src/src/app/components/views/navbar/navbar.component.html
@@ -23,6 +23,12 @@
             <a [routerLink]="['/auth/login']" class="dropdown-item nav-link">Login</a>
           </div>
         </li>
+        <li class="nav-item dropdown dropdown-parent" [routerLinkActive]="['nav-link-active']" [routerLinkActiveOptions]="{exact:true}">
+          <a class="nav-link dropdown-toggle" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Planner</a>
+          <div class="dropdown-menu" aria-labelledby="dropdown01" [routerLinkActive]="['nav-link-active']" [routerLinkActiveOptions]="{exact:true}">
+            <a [routerLink]="['/planner']" class="dropdown-item nav-link">Planner</a>
+          </div>
+        </li>
       </ul>
       <!--/navbar left-->
       <!--navbar right-->
