--- a/angular-src/src/app/components/views/planner/map/map.component.html
+++ b/angular-src/src/app/components/views/planner/map/map.component.html
@@ -1,3 +1,6 @@
-<p>
-  map works!
-</p>
+<div class="map-component-wrapper">
+  <!-- this creates a google map on the page with the given lat/lng from -->
+  <!-- the component as the initial center of the map: -->
+  <agm-map [latitude]="lat" [longitude]="lng">
+  </agm-map>
+</div>
